Add initial draft of API layout

--- a/settings.ini
+++ b/settings.ini
@@ -28,7 +28,7 @@ title = %(lib_name)s
 ### PyPI ###
 audience = Developers
 author = ncoop57
-author_email = nacooper01@email.wm.edu
+author_email = nacooper01@wm.edu
 copyright = 2022 onwards, %(author)s
 description = A library for squeakily cleaning and filtering language datasets.
 keywords = nbdev jupyter notebook python
@@ -37,6 +37,6 @@ status = 3
 user = CarperAI
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = datasets fastcore
 # dev_requirements = 
 # console_scripts =
