--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = CarperAI
 
 ### Optional ###
-requirements = datasets fastcore
+requirements = datasets fastcore rich
 # dev_requirements = 
 # console_scripts =
