--- a/settings.ini
+++ b/settings.ini
@@ -1,42 +1,36 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = squeakily
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = squeakily
+version = 0.0.2
 min_python = 3.7
 license = apache2
-
-### nbdev ###
 doc_path = _docs
 lib_path = squeakily
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://CarperAI.github.io
+doc_baseurl = /squeakily
+git_url = https://github.com/CarperAI/squeakily
+title = squeakily
 audience = Developers
 author = ncoop57
 author_email = nacooper01@wm.edu
-copyright = 2022 onwards, %(author)s
+copyright = 2022 onwards, ncoop57
 description = A library for squeakily cleaning and filtering language datasets.
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = CarperAI
-
-### Optional ###
 requirements = datasets fastcore rich
-# dev_requirements = 
-# console_scripts =
+black_formatting = False
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
+
