Add minhash dedup via global filters

--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = CarperAI
-requirements = datasets fastcore rich
+requirements = datasketch datasets fastcore networkit rich
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
@@ -33,4 +33,3 @@ allowed_cell_metadata_keys =
 jupyter_hooks = True
 clean_ids = True
 clear_all = False
-
