Fix dedup bug and add pins to version for better stability

--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = CarperAI
-requirements = datasketch datasets fastcore networkit rich
+requirements = datasketch==1.5.8 datasets==2.7.1 fastcore networkit rich
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
