--- a/settings.ini
+++ b/settings.ini
@@ -26,6 +26,7 @@ language = English
 status = 3
 user = CarperAI
 requirements = datasketch==1.5.8 datasets==2.7.1 fastcore networkit rich
+dev_requirements = nbdev scrubadub
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
