--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = squeakily
 lib_name = squeakily
-version = 0.0.2
+version = 0.0.3
 min_python = 3.7
 license = apache2
 doc_path = _docs
@@ -26,7 +26,7 @@ language = English
 status = 3
 user = CarperAI
 requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore networkit rich
-dev_requirements = nbdev scrubadub
+dev_requirements = nbdev scrubadub twine
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
@@ -34,3 +34,4 @@ allowed_cell_metadata_keys =
 jupyter_hooks = True
 clean_ids = True
 clear_all = False
+
