--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = CarperAI
-requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore networkit rich trasnsformers
+requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore networkit rich transformers
 dev_requirements = nbdev scrubadub
 black_formatting = False
 readme_nb = index.ipynb
