Fix bug we global filter functions with concatenation and separation

--- a/settings.ini
+++ b/settings.ini
@@ -25,8 +25,8 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = CarperAI
-requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore fasttext huggingface-hub networkit rich
-dev_requirements = nbdev scrubadub twine sentencepiece
+requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore huggingface-hub networkit rich
+dev_requirements = fasttext nbdev scrubadub twine sentencepiece
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
