--- a/settings.ini
+++ b/settings.ini
@@ -18,7 +18,7 @@ git_url = https://github.com/CarperAI/squeakily
 title = squeakily
 audience = Developers
 author = ncoop57
-author_email = nacooper01@wm.edu
+author_email = nathan.cooper@stability.ai
 copyright = 2022 onwards, ncoop57
 description = A library for squeakily cleaning and filtering language datasets.
 keywords = nbdev jupyter notebook python
@@ -26,7 +26,7 @@ language = English
 status = 3
 user = CarperAI
 requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore huggingface-hub networkit rich ftfy scikit-learn
-dev_requirements = fasttext nbdev scrubadub twine sentencepiece
+dev_requirements = fasttext nbdev scrubadub twine sentencepiece code-tokenize
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
