--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ language = English
 status = 3
 user = CarperAI
 requirements = datasketch==1.5.8 datasets==2.7.1 Faker==15.3.3 fastcore huggingface-hub networkit rich ftfy scikit-learn
-dev_requirements = fasttext nbdev scrubadub twine sentencepiece code-tokenize
+dev_requirements = BeautifulSoup4 fasttext nbdev scrubadub twine sentencepiece code-tokenize langchain==0.0.212 openai
 black_formatting = False
 readme_nb = index.ipynb
 allowed_metadata_keys = 
